# pynife

./: .pre-commit-config.yaml  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: README.md
pynife/: data.py  dataset_vault.py  embedding.py  losses.py  nife.py  utilities.py
pynife/distillation/: infer.py
pynife/tokenizer/: expand.py
scripts/: infer_datasets.py
tests/: test_data.py  test_expand_tokenizer.py  test_nife.py
