[project]
name = "pynife"
description = "Nearly Inference Free embedding models in python"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"

dependencies = [
    "transformers[torch]",
    "sentence-transformers",
    "numpy",
    "datasets",
    "skeletoken>=0.3.0",
    "wandb",
    "jinja2",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ipython",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-coverage",
    "ruff",
]

[tool.ruff]
exclude = [".venv/"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    # Annotations: Enforce type annotations
    "ANN",
    # Complexity: Enforce a maximum cyclomatic complexity
    "C90",
    # Pydocstyle: Enforce docstrings
    "D",
    # Unused imports
    "F",
    # Isort: Enforce import order
    "I",
    # Numpy: Enforce numpy style
    "NPY",
    # Print: Forbid print statements
    "T20",
]
ignore = [
    # Allow self and cls to be untyped, and allow Any type
    "ANN001", "ANN002", "ANN401",
    # Pydocstyle ignores
    "D100", "D101", "D104", "D203", "D213", "D401",
    # Allow use of f-strings in logging
    "G004"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "E731"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportExplicitAny = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false

[tool.pydoclint]
style = "google"
exclude = "test_"
allow-init-docstring = true
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
require-return-section-when-returning-nothing = false

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true

[tool.setuptools]
packages = ["pynife"]

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm

[tool.setuptools.dynamic]
version = {attr = "pynife.version.__version__"}
